--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,9 @@ typings/
 .yarn
 
 # dotenv environment variables file
-# .env
+.env
+.env.local
+.env.*.local
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
