Improve homepage design with hero background image and red overlay

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,6 +18,5 @@
     "baseUrl": "src"
   },
   "exclude": ["node_modules"],
-  "include": ["src", "**/*.js", "**/*.jsx", "src/**/*"],
-  "references": [{ "path": "./jsconfig.node.json" }]
+  "include": ["src", "**/*.js", "**/*.jsx", "src/**/*"]
 }
