--- a/jsconfig.node.json
+++ b/jsconfig.node.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["vite.config.mjs"]
+    "allowSyntheticDefaultImports": true,
+    "checkJs": false,
+    "skipLibCheck": true
+  }
 }
