--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
@@ -17,6 +17,6 @@
     "jsx": "react-jsx",
     "baseUrl": "src"
   },
-  "exclude": ["node_modules"],
-  "include": ["src", "**/*.js", "**/*.jsx", "src/**/*"]
+  "exclude": ["node_modules", "dist", "build"],
+  "include": ["src/**/*.js", "src/**/*.jsx"]
 }
